--- a/assets/sass/components/_event.scss
+++ b/assets/sass/components/_event.scss
@@ -51,3 +51,8 @@
 #Element_OphNuPreoperative_BaselineObservations_bloodsugar_na {
 	width: 1em !important;
 }
+
+#Element_OphNuPreoperative_BaselineObservations_rate {
+	width: 5em;
+	display: inline;
+}
